spark/k8s/spark_history/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-history
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 18080
      nodePort: 30004
      protocol: TCP
      name: http
