spark/k8s/spark_history/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history
spec:
  rules:
  - host: jobs.spark.ntuhpc.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spark-history
            port:
              number: 80
